# anki-api

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
_dev/experiments/: .gitignore  EXPERIMENTS_PLAN.md
_dev/experiments/00_open_collection_headless/: FINDINGS.md
_dev/experiments/01_review_scheduling_fsrs/: FINDINGS.md
_dev/experiments/02_locking_and_concurrency/: FINDINGS.md
_dev/experiments/03_fastapi_collection_server/: FINDINGS.md
_dev/experiments/04_sync_self_hosted_server/: FINDINGS.md
docs/: ENDPOINTS.md  api-surface-v1.md
src/anki_api/: __init__.py  __main__.py  app.py  collection_handle.py  config.py  deps.py  errors.py  ids.py
src/anki_api/routers/: cards.py  deck_presets.py  decks.py  filtered_decks.py  fsrs.py  image_occlusion.py  import_export.py  media.py  notes.py  notetypes.py  preferences.py  review.py  search.py  stats.py  sync.py  system.py  tags.py  tts.py  typing_answer.py  undo.py  util.py
tests/: conftest.py  smoke.py
tests/e2e/: test_blockers.py  test_card_actions_extra.py  test_cards.py  test_deck_presets.py  test_decks.py  test_failure_paths.py  test_filtered_decks.py  test_find_dupes.py  test_fsrs.py  test_image_occlusion.py  test_import_export.py  test_maintenance.py  test_media.py  test_notes.py  test_notetypes.py  test_preferences.py  test_review.py  test_search.py  test_stats.py  test_sync.py  test_tags.py  test_undo.py  test_util.py
tests/unit/: test_collection_handle.py  test_config.py  test_errors.py  test_ids.py  test_media_safe_name.py  test_opchanges.py
(+1 files in other folders)
