[project]
name = "anki-api"
version = "0.1.0"
description = "A headless REST API server wrapping an Anki collection (built on the anki package, no Qt)."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["anki", "spaced-repetition", "flashcards", "rest", "api", "fastapi"]
# The anki wheel ships no CPython 3.13 build yet; 3.12 is the safe ceiling (see _dev/experiments/00).
requires-python = ">=3.9,<3.13"
dependencies = [
    "anki>=25.9,<26",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-multipart>=0.0.20",
]

[project.urls]
Homepage = "https://github.com/lukastk/anki-api"
Repository = "https://github.com/lukastk/anki-api"

[project.scripts]
anki-api = "anki_api.__main__:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# smoke.py is a manual over-the-wire script, not collected (doesn't match test_*.py).
